fixing the first workflow

--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,4 +1,4 @@
-name: second workflow
+name: first workflow
 
 on:
   - push 
@@ -20,6 +20,6 @@ jobs:
          echo "This is line 2"
          echo "This is line 3"
 
-
+         
 
 
